--- a/style.css
+++ b/style.css
@@ -1,4 +1,134 @@
 body {
+
     background-color: aqua;
 
 }
+/* First div */
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+}
+.box {
+    width: 300px;
+    height: 50px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .small-box {
+    width: 200px;
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 14px;
+  }
+/* This is second div */
+.c2 {
+	display: flex;
+	justify-content: space-between;
+	padding: 20px;
+	background-color: #f5f5f5;
+}
+
+.boxc2 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	width: 30%;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 20px;
+	box-sizing: border-box;
+	margin-right: 20px;
+}
+
+.boxc2:last-child {
+	margin-right: 0;
+}
+.image {
+    width: 100%;
+    height: 200px;
+    background-color: gray;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.textbox {
+    width: 80%;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px;
+    box-sizing: border-box;
+}
+/* third div */
+.c3 {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
+  
+  .left-col {
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  
+  .input-container {
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+  }
+  
+  label {
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    color: #333;
+  }
+  
+  .small-text, .large-text {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    color: #333;
+    background-color: #fff;
+  }
+  
+  .right-col {
+    flex: 1;
+    height: 300px;
+    background-image: url('your-image.jpg');
+    background-position: center;
+    background-size: cover;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
