--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-    background-color: aqua;
+    background-color: #f5f5f5;
 
 }
 /* First div */
@@ -9,7 +9,8 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+	height: 100vw;
+   /* Above ^ vh > vw */
 }
 .box {
     width: 300px;
@@ -81,9 +82,8 @@ body {
 /* third div */
 .c3 {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 600px;
+   justify-content: flex-start;
+    width: 100vw;
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
@@ -100,6 +100,10 @@ body {
   }
   
   .input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 10px;
@@ -110,25 +114,25 @@ body {
     font-family: Arial, sans-serif;
     color: #333;
   }
-  
-  .small-text, .large-text {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-    color: #333;
-    background-color: #fff;
-  }
-  
+
+
   .right-col {
     flex: 1;
     height: 300px;
     background-image: url('your-image.jpg');
-    background-position: center;
+    background-position: right;
     background-size: cover;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+  .textB3 {
+    width: 80%;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px;
+    box-sizing: border-box;
+}
