https://github.com/11Dah/myPage.git

--- a/tt.css
+++ b/tt.css
@@ -94,7 +94,7 @@ img{
     width: 500px;
     height: 450px;
 }
-/* Nav */
+/* Nav off on html */
 .navbar {
     display: flex;
     align-items: center;
