--- a/tt.css
+++ b/tt.css
@@ -12,7 +12,7 @@
 .wrapper{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url('../image/backg.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url('../myPage/image/colorado.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
 }
